Domain Secure http to https

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World from My</h1>
+    <h1>Hello World from My All</h1>
     <h1>Muhammad Saad</h1>
     <h1>Hello</h1>
     <div>hello Muhammad Saad Hello Again Again</div>
