--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello World from My All</h1>
-    <h1>Muhammad Saad</h1>
+    <h1>Saad</h1>
     <h1>Hello</h1>
     <div>hello Muhammad Saad Hello Again Again</div>
 </body>
